--- a/css/main.css
+++ b/css/main.css
@@ -166,7 +166,16 @@ h4 {margin-bottom: 34px;
 
 h3 {font-size: 24px;}
 
-.features {transform: skewY(8.0833deg);}
+.main {position: relative;}
+
+.features:before {transform: skewY(8deg);
+                  content: "";
+                  background-color: white;
+                  width: 100%;
+                  height: 106%;
+                  left: 0;
+                  top: -3%;
+                  z-index: -1;}
 
 .features__par {color: #7f7f7f;}
 
