--- a/css/main.css
+++ b/css/main.css
@@ -101,12 +101,16 @@ textarea {
 
 {
 
-  body {margin: 0px; padding: 0px;}
+  body {margin: 0px;
+        padding: 0px;
+        background-color: #8a86d2;}
 
   header {background-size: cover;
+          position: relative;
           background-image: linear-gradient(to bottom, #241d7d, #8c88d2);
           color: white;
-          height: 683px;}
+          height: 683px;
+         z-index:-2}
 
   .logo {display: flex;
          float: left;
@@ -148,23 +152,25 @@ textarea {
                      padding: 17px 58px;
                      color: #fcffff;}
 
- .features {height: 1780px;
+ .features {height: 1980px;
             color: black;
             display: flex;
             align-items: center;
-            flex-flow: column nowrap;
-            margin: 95px 36px 155px 27px;}
+            flex-flow: column nowrap;}
 
  .features__phone {margin: 97px auto 49px auto;
                    width: 224;
                    height: 203px;}
+
+ .features__par {width: 80%;}
 
 h3, h4 {color: #08053e;}
 
 h4 {margin-bottom: 34px;
     margin-top: 49px;}
 
-h3 {font-size: 24px;}
+h3 {font-size: 24px;
+    margin-top: 155px;}
 
 .features {position: relative;}
 
@@ -173,9 +179,9 @@ h3 {font-size: 24px;}
                   position: absolute;
                   background-color: white;
                   width: 100%;
-                  height: 106%;
+                  height: 100%;
                   left: 0;
-                  top: -3%;
+                  top: 0%;
                   z-index: -1;}
 
 .features__par {color: #7f7f7f;}
@@ -191,9 +197,40 @@ h3 {font-size: 24px;}
                 background-color: #06d79d;
                 color: white;
                 margin-top: 16px;
-                border: none;}
+                border: none;
+                margin-bottom: 150px;}
 
+footer        {background-color: #07043b;
+               color: white;
+               padding-top: 242px;
+               margin-top: -100px;
+               position: absolute;
+               z-index: -3;}
 
+.flex-container {margin-left: 55px;}
+
+.flex-container__telephone {margin-top: 53px;}
+
+.flex-container__gmail {margin-top: 17px;
+                margin-bottom: 87px;}
+
+.flex-container1 {display: flex;
+                  flex-flow: column nowrap;
+                  width: 78%;}
+
+.flex-container1__email {height: 43px;
+                         width: 100%;
+                         border: none;
+                         border-radius: 5px;
+                         margin-bottom: 13px;}
+
+.flex-container1__button {height: 43px;
+                          width: 55%;
+                          background-color: #06d79d;
+                          border: none;
+                          color: white;
+                          margin-bottom: 84px;
+                          align-self: flex-end;}
 
 
 
