--- a/css/main.css
+++ b/css/main.css
@@ -203,7 +203,8 @@ h3 {font-size: 24px;
 footer        {background-color: #07043b;
                color: white;
                padding-top: 242px;
-               margin-top: -15%;
+               padding-bottom: 150px;
+               margin-top: -35%;
                position: absolute;
                z-index: -3;}
 
